# MailYou

./: .SRCINFO  .gitignore  404.html  LICENSE  PKGBUILD  README.html  README.md  README.zh-CN.md  electron-builder.yml  hashmap.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: README.md.DKX9BGWz.js  README.md.DKX9BGWz.lean.js  app.DkF7oNn_.js  guide_index.md.B0EiXkZH.js  guide_index.md.B0EiXkZH.lean.js  index.md.ChwwIH_r.js  index.md.ChwwIH_r.lean.js  legal_privacy-policy.md.BVI1tzsP.js  legal_privacy-policy.md.BVI1tzsP.lean.js  legal_terms-of-service.md.BEkuFwIA.js  legal_terms-of-service.md.BEkuFwIA.lean.js  release_index.md.U30159EQ.js  release_index.md.U30159EQ.lean.js  style.Dx90bxtV.css  zh_guide_index.md.B1GwK3DJ.js  (+9 more)
src/rust/: Cargo.toml
src/rust/mail/: models.rs
src/rust/src/: config.rs  main.rs  models.rs  oauth.rs  protocol.rs  realtime.rs
src/rust/src/core/: app.rs  context.rs  local_handlers.rs  mail_handlers.rs  mail_service.rs  mod.rs
src/rust/src/models/: account.rs  contacts.rs  draft.rs  mailbox.rs  sync.rs
src/rust/src/provider/: common.rs  imap.rs  mock.rs  mod.rs  pop3.rs  registry.rs
src/rust/src/provider/imap/: client_ops.rs  draft_ops.rs  folder_ops.rs  label_ops.rs  message_ops.rs  parse_ops.rs  smtp_ops.rs  sync_ops.rs
src/rust/src/provider/pop3/: client.rs  mail_ops.rs
src/rust/src/storage/: accounts.rs  drafts.rs  mailbox.rs  memory.rs  mod.rs  persisted.rs  sync.rs
src/rust/src/storage/memory/: account_ops.rs  contacts.rs  merge_ops.rs  message_ops.rs  mod.rs  security.rs
(+120 files in other folders)
