[package]
name = "mailyou-mail-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mailyou-mail-backend"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imap = "2"
imap-proto = "0.10"
native-tls = "0.2"
lettre = { version = "0.11", features = ["builder", "smtp-transport", "native-tls"] }
mailparse = "0.16"
chrono = "0.4"
keyring = { version = "3", features = ["linux-native"] }
