[package]
name = "mailyou-mail-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mailyou-mail-backend"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
imap-proto = "0.16"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "sync"] }
async-trait = "0.1"
futures = "0.3"
lettre = { version = "0.11", features = ["builder", "tokio1", "tokio1-native-tls"] }
mailparse = "0.16"
chrono = "0.4"
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = { version = "3" }
